--- a/game-grid/src/index.html
+++ b/game-grid/src/index.html
@@ -28,11 +28,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <img id="modal-image" src="" alt="">
-                <a class="modal-link" id="modal-add-game" style="right: 8rem;" href=""">
+                <!-- <a class="modal-link" id="modal-add-game" style="right: 8rem;" href=""">
                     <span title="Experiment: Add to Game library">
                         &plus;
                     </span>
-                </a>
+                </a> -->
                 <a class="modal-link" id="modal-link" href=""">
                     <span title="Download with magnet">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-magnet-fill" viewBox="0 0 16 16">
