feat: Add jc141 attribution

--- a/game-grid/src/index.html
+++ b/game-grid/src/index.html
@@ -16,8 +16,8 @@
     
     <div class="container">
         <div class="header">
-            <h1>Latest Games</h1>
-            <p>Click cards to explore more content</p>
+            <h1><a href="https://gitlab.com/jc141x/portal/" target="_blank" rel="noopener noreferrer">jc141</a> Game Distributions</h1>
+            <p>Click games to explore more content</p>
         </div>
 
         <div class="grid"></div>
