feat: Add "View on Github" button, add key-binds description

--- a/game-grid/src/index.html
+++ b/game-grid/src/index.html
@@ -17,7 +17,15 @@
     <div class="container">
         <div class="header">
             <h1><a href="https://gitlab.com/jc141x/portal/" target="_blank" rel="noopener noreferrer">jc141</a> Game Distributions</h1>
-            <p>Click games to explore more content</p>
+            <div class="github-view-container">
+                <a href="https://github.com/Joaqim/game-grid-nix" class="github-button" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" class="github-icon">
+                    View on GitHub
+                </a>
+            </div>
+            <p><h2>Click games to explore more content</h2></p>
+            <p>Use Left and Right Arrow keys switch from currently opened card.</p>
+            <p>Use Escape to close a card after pressing it.</p>
         </div>
 
         <div class="grid"></div>
